Move index.html to a new directory

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Hello, Bonsai!</title>
+  <title>20Caml48</title>
   <script defer src="main.bc.js"></script>
 </head>
 
